bug fixed. chat in a meet

--- a/Frontend/src/app/chat/chat.component.html
+++ b/Frontend/src/app/chat/chat.component.html
@@ -31,7 +31,7 @@
         
         <div class="msg-bubble">
           <div class="msg-info">
-            <div class="msg-info-name"></div>
+            <div class="msg-info-name"><h6 style="color: rgb(184, 184, 184);">{{i.user}}</h6></div>
             <div class="msg-info-time"></div>
           </div>
   
