data flow updated

--- a/Frontend/src/app/header/header.component.html
+++ b/Frontend/src/app/header/header.component.html
@@ -7,13 +7,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Home</a>
+            <a class="nav-link" aria-current="page" *ngIf="auth.userLoggedIn()" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="login">Login</a>
+            <a class="nav-link" routerLink="login" *ngIf="!auth.userLoggedIn()">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="signup">Signup</a>
+            <a class="nav-link" *ngIf="!auth.userLoggedIn()" routerLink="signup">Signup</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" *ngIf="auth.userLoggedIn()" (click)="logoutUser()">Signout</a>
           </li>
          
         </ul>
