--- a/Frontend/src/app/chat/chat.component.html
+++ b/Frontend/src/app/chat/chat.component.html
@@ -1,33 +1,23 @@
 <section class="msger">
-    <header class="msger-header">
-      <div class="msger-header-title">
-        <i class="fas fa-comment-alt"></i> SimpleChat
-      </div>
-      <div class="msger-header-options">
-        <span><i class="fas fa-cog"></i></span>
-      </div>
-    </header>
+   
   
-    <main class="msger-chat">
-      <!-- <div class="msg left-msg">
-        <div
-         class="msg-img"
-         style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg)"
-        ></div>
+    <main class="msger-chat" *ngFor="let i of messageArray">
+      <div class="msg left-msg" *ngIf="i.user!==mail">
+        
   
         <div class="msg-bubble">
           <div class="msg-info">
-            <div class="msg-info-name">BOT</div>
-            <div class="msg-info-time">12:45</div>
+            <div class="msg-info-name"><h6 style="color: rgb(184, 184, 184);">{{i.user}}</h6></div>
+            <div class="msg-info-time"></div>
           </div>
   
           <div class="msg-text">
-            Hi, welcome to SimpleChat! Go ahead and send me a message. 😄
+            <h6 style="color: black;">{{i.message}}</h6>
           </div>
         </div>
-      </div> -->
+      </div>
   
-      <div class="msg right-msg" *ngFor="let i of messageArray">
+      <div class="msg right-msg" *ngIf="i.user==mail" >
         
         <div class="msg-bubble">
           <div class="msg-info">
