--- a/Frontend/src/app/chat/chat.component.html
+++ b/Frontend/src/app/chat/chat.component.html
@@ -1,3 +1,18 @@
+<div>
+  
+  <video style="height: 100px; width: 100px; border: 1px solid black;" #video  id="videoplots" autoplay></video>
+  
+</div>
+<div>
+  
+  <video #videoplot  id="videoplot" autoplay></video>
+  <button #muteAudio id="muteAudio"  class="btn btn-primary">Mute audio</button>
+  <button #muteAudio id="unmuteAudio" style="display: none;"  class="btn btn-primary">unMute audio</button>
+  <button #muteVideo id="muteVideo"  class="btn btn-primary">Mute Video</button>
+  <button #muteVideo id="unmuteVideo" style="display: none;" class="btn btn-primary">unMute Video</button>
+
+</div>
+
 <section class="msger">
    
   
@@ -37,3 +52,6 @@
       <button type="submit" [disabled]=""  class="msger-send-btn">Send</button>
     </form>
   </section>
+
+
+  
