--- a/Frontend/src/app/chat/chat.component.html
+++ b/Frontend/src/app/chat/chat.component.html
@@ -3,20 +3,24 @@
   <video #video  id="videoplots" autoplay></video>
   
 </div> -->
-<div>
-  
-  <video #videoplot style="height: 85vh; width: 100%;"  id="videoplot" autoplay></video>
+<div id="videospace">
+  <p style="width: 100%; height: 85%;"></p>
+  <!-- <video #videoplot style="height: 85vh; width: 100%;"  id="videoplot" autoplay></video> -->
   <div>
-    <button  id="muteAudio"  class="btn btn-primary">Mute audio</button>
+    <button  id="muteAudio"  style="display: none;"   class="btn btn-primary">Mute audio</button>
     <button  id="unmuteAudio" style="display: none;"  class="btn btn-primary">unMute audio</button>
-    <button  id="muteVideo"  class="btn btn-primary">Mute Video</button>
-    <button  id="unmuteVideo" style="display: none;" class="btn btn-primary">unMute Video</button>
-    <button  id="leaveMeeting"  class="btn btn-danger">Leave</button>
+    <button  id="muteVideo"   style="display: none;"  class="btn btn-primary">Mute Video</button>
+    <button  id="unmuteVideo"  style="display: none;" class="btn btn-primary">unMute Video</button>
+    <button  id="leaveMeeting"  style="display: none;"   class="btn btn-danger">Leave</button>
 
   </div>
 
 </div>
 
+
+<ul>
+  <li *ngFor="let i of participants">{{i.user}}</li>
+</ul>
 
 <button data-bs-toggle="modal" data-bs-target="#myModal" class="btn btn-primary">Show Chat</button>
 
