--- a/Frontend/src/app/chat/chat.component.html
+++ b/Frontend/src/app/chat/chat.component.html
@@ -4,31 +4,46 @@
   
 
 </div> -->
+
+
 <div class="container">
 
   <div id="videospace">
-    <p style="width: 100%; height: 85%;"></p>
+   
     <!-- <video #videoplot style="height: 85vh; width: 100%;"  id="videoplot" autoplay></video> -->
-    <div>
-      <button  id="muteAudio"  style="display: none;"   class="btn btn-primary">Mute audio</button>
-      <button  id="unmuteAudio" style="display: none;"  class="btn btn-primary">unMute audio</button>
-      <button  id="muteVideo"   style="display: none;"  class="btn btn-primary">Mute Video</button>
-      <button  id="unmuteVideo"  style="display: none;" class="btn btn-primary">unMute Video</button>
-      <button  id="leaveMeeting"  style="display: none;"   class="btn btn-danger">Leave</button>
-      <button  id="shareScreen" (click)="shareScreenFunc()" style="display: none;"   class="btn btn-info">Share screen</button>
-      <button  id="stopshareScreen" style="display: none;" class="btn btn-info">Stop Share screen</button>
-      
+    <div class="buttons">
 
-    </div>
-  
+      <div id="loading" style="z-index: 1000; margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 45%;
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);" >
+        <div class="d-flex justify-content-center ">
+          <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+      </div>
+      
+      <p style="width: 100%; height: 85%; margin-top: 3rem;"></p>
+      <button  id="muteAudio"  style="display: none;"   class="button btn btn-primary">Mute audio</button>
+      <button  id="unmuteAudio" style="display: none;"  class="button btn btn-primary">Unmute audio</button>
+      <button  id="muteVideo"   style="display: none;"  class="button btn btn-primary">Mute Video</button>
+      <button  id="unmuteVideo"  style="display: none;" class="button btn btn-primary">Unmute Video</button>
+      <button  id="leaveMeeting"  style="display: none;"   class="button btn btn-danger">Leave</button>
+      <button  id="shareScreen" (click)="shareScreenFunc()" style="display: none;"   class="button btn btn-info">Share screen</button>
+      <button  id="stopshareScreen" style="display: none;" class="button btn btn-info">Stop Share screen</button>
+      <button id="showChat" style="display: none;"  data-bs-toggle="modal" data-bs-target="#myModal" class="button btn btn-primary">Show Chat</button>
+      <button id="showPaticipants" style="display: none;"  data-bs-toggle="modal" data-bs-target="#myModalParticipants" class="button btn btn-primary">Show Participants</button>
+      
+      </div>
+
   </div>
   
   
-  <ul>
-    <li *ngFor="let i of participants">{{i.user}}</li>
-  </ul>
+
   
-  <button data-bs-toggle="modal" data-bs-target="#myModal" class="btn btn-primary">Show Chat</button>
   
   
    <!-- The Modal -->
@@ -93,6 +108,43 @@
       </div>
     </div>
   </div>
+
+
+  <div class="modal" id="myModalParticipants">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <!-- Modal body -->
+        <div class="modal-body">
+          <button type="button"  class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+          
+          <div  *ngFor="let i of participants">
+
+            <ul class="list-group">
+              
+              <li class="list-group-item list-group-item-secondary">
+                <span><label for=""><h6>Name:</h6> </label>{{i.user}}</span><br>
+                <!-- <span><label for=""><h6>Date:</h6> </label>{{task.date}}</span><br> -->
+                <!-- <button class="btn btn-warning " >UPDATE</button> -->
+                <button class="btn btn-danger " >Remove</button>
+                
+                
+              </li>
+              
+            </ul>
+            
+          </div>
+       
+        </div>
+  
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          
+        </div>
+  
+      </div>
+    </div>
+  </div>
+
 </div>
 
 
