auto created room completed

--- a/Frontend/src/app/chat/chat.component.html
+++ b/Frontend/src/app/chat/chat.component.html
@@ -122,10 +122,10 @@
             <ul class="list-group">
               
               <li class="list-group-item list-group-item-secondary">
-                <span><label for=""><h6>Name:</h6> </label>{{i.user}}</span><br>
+                <span><label for=""><h6>Name:</h6> </label>{{i.user}}</span><button class="btn btn-danger " >Remove</button><br>
                 <!-- <span><label for=""><h6>Date:</h6> </label>{{task.date}}</span><br> -->
                 <!-- <button class="btn btn-warning " >UPDATE</button> -->
-                <button class="btn btn-danger " >Remove</button>
+                
                 
                 
               </li>
