--- a/Frontend/src/app/test/test.component.html
+++ b/Frontend/src/app/test/test.component.html
@@ -1,17 +1,17 @@
 <ul class="nav fixed-bottom justify-content-center">
 
-   
+
 
     <li class="nav-item">
-        <button id="shareScreen" (click)="shareScreen()" style="display: none;" class="button btn btn-primary"><svg
-                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cast"
-                viewBox="0 0 16 16">
+        <button id="shareScreen" (click)="shareScreen()" style="display: none;"
+            class="button btn btn-outline-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                fill="currentColor" class="bi bi-cast" viewBox="0 0 16 16">
                 <path
                     d="m7.646 9.354-3.792 3.792a.5.5 0 0 0 .353.854h7.586a.5.5 0 0 0 .354-.854L8.354 9.354a.5.5 0 0 0-.708 0z" />
                 <path
                     d="M11.414 11H14.5a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.5-.5h-13a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .5.5h3.086l-1 1H1.5A1.5 1.5 0 0 1 0 10.5v-7A1.5 1.5 0 0 1 1.5 2h13A1.5 1.5 0 0 1 16 3.5v7a1.5 1.5 0 0 1-1.5 1.5h-2.086l-1-1z" />
             </svg></button>
-        <button id="stopShareScreen" style="display: none;" class="button btn btn-danger"><svg
+        <button id="stopShareScreen" style="display: none;" class="button btn btn-outline-danger"><svg
                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-slash-square"
                 viewBox="0 0 16 16">
                 <path
@@ -21,14 +21,14 @@
 
     </li>
     <li class="nav-item">
-        <button id="muteAudio" style="display: none;" class="button btn btn-primary"><svg
+        <button id="muteAudio" style="display: none;" class="button btn btn-outline-primary"><svg
                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-mic-fill"
                 viewBox="0 0 16 16">
                 <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z" />
                 <path
                     d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z" />
             </svg></button>
-        <button id="unmuteAudio" style="display: none;" class="button btn btn-danger"><svg
+        <button id="unmuteAudio" style="display: none;" class="button btn btn-outline-danger"><svg
                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-mic-mute-fill" viewBox="0 0 16 16">
                 <path
@@ -37,22 +37,35 @@
             </svg></button>
     </li>
     <li class="nav-item">
-        <button id="leaveMeeting" style="display: none;" class="button btn btn-danger">Leave</button>
+        <button id="leaveMeeting" style="display: none;" class="button btn btn-outline-danger"><svg
+                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
+            </svg></button>
     </li>
 
     <li class="nav-item">
-        <button id="muteVideo" style="display: none;" class="button btn btn-primary"><svg
+        <button id="muteVideo" style="display: none;" class="button btn btn-outline-primary"><svg
                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-camera-video-fill" viewBox="0 0 16 16">
                 <path fill-rule="evenodd"
                     d="M0 5a2 2 0 0 1 2-2h7.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 4.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 13H2a2 2 0 0 1-2-2V5z" />
             </svg></button>
-        <button id="unmuteVideo" style="display: none;" class="button btn btn-danger"><svg
+        <button id="unmuteVideo" style="display: none;" class="button btn btn-outline-danger"><svg
                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                class="bi bi-camera-video-off-fill" viewBo
-                x="0 0 16 16">
+                class="bi bi-camera-video-off-fill" viewBo x="0 0 16 16">
                 <path fill-rule="evenodd"
                     d="M10.961 12.365a1.99 1.99 0 0 0 .522-1.103l3.11 1.382A1 1 0 0 0 16 11.731V4.269a1 1 0 0 0-1.406-.913l-3.111 1.382A2 2 0 0 0 9.5 3H4.272l6.69 9.365zm-10.114-9A2.001 2.001 0 0 0 0 5v6a2 2 0 0 0 2 2h5.728L.847 3.366zm9.746 11.925-10-14 .814-.58 10 14-.814.58z" />
+            </svg></button>
+    </li>
+
+    <li class="nav-item">
+        <button id="chat" style="display: none;" class="button btn btn-outline-primary"><svg
+                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-chat-left-fill" viewBox="0 0 16 16">
+                <path
+                    d="M2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
             </svg></button>
     </li>
 
@@ -76,16 +89,16 @@
         top: 50%;
         left: -1%;
         -ms-transform: translateY(-50%);
-        transform: translateY(-50%);" >
-          <div class="d-flex justify-content-center ">
-            <div class="spinner-border text-primary" role="status">
-              <span class="visually-hidden">Loading...</span>
+        transform: translateY(-50%);">
+            <div class="d-flex justify-content-center ">
+                <div class="spinner-border text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
             </div>
-          </div>
         </div>
         <div class="col md-4" *ngFor="let stream of streams">
-            <div *ngIf="stream.attributes.type=='screen-share'">
-                <div style="height: 100%;width: 100%;" id="carouselExampleSlidesOnly" class="carousel slide"
+            <div *ngIf="stream.attributes.type=='screen-share'" style="z-index: 1000;">
+                <div style="height: 75%;width: 100%;" id="carouselExampleSlidesOnly" class="carousel slide"
                     data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -102,9 +115,10 @@
                 </div>
                 <video *ngIf="!stream.videoMuted" [srcObject]="stream.mediaStream" class="card-img-top" autoplay
                     muted></video>
-                <div class="card-body">
+                <div class="card-body" style="text-align: center;">
                     <div class="card-body">
-                        <h6 class="card-title">{{stream.attributes.name}} (Self You)</h6>
+                        <h6 class="card-title">{{stream.attributes.name}} <span
+                                *ngIf="stream.attributes.name==username">(You)</span></h6>
                         <span *ngIf="stream.audioMuted" style="margin: 2mm;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-mic-mute-fill" viewBox="0 0 16 16">
