chat component intergrated to conference page

--- a/Frontend/src/app/test/test.component.css
+++ b/Frontend/src/app/test/test.component.css
@@ -723,6 +723,7 @@ body {
 .br-chat-wrapper.active {
   z-index: 3;
   opacity: 1;
+  margin-top: 3rem;
 }
 
 .br-chat-wrapper .br-chat-inner-wrapper {
@@ -900,6 +901,7 @@ html, body {
 
 body {
   font-family: 'Lato', sans-serif;
+  overflow: hidden;
 }
 
 img {
@@ -963,3 +965,12 @@ img {
 }
 
 /*# sourceMappingURL=main.css.map */
+
+.img{
+  background: url('https://images.unsplash.com/photo-1523821741446-edb2b68bb7a0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+  height: 31vh;
+    width: 58vh;
+    text-align: center;
+    color: white;
+ 
+}
