--- a/Frontend/src/app/chat/chat.component.css
+++ b/Frontend/src/app/chat/chat.component.css
@@ -30,20 +30,9 @@ body {
 
 .msger {
   overflow-x: hidden;
-  /* overflow-y: hidden;
-  display: flex; */
   flex-flow: column wrap;
   justify-content: space-between;
-  height: 78vh;
-  /* width: 100%;
-  max-width: 867px;
-  margin: 25px 10px;
-  height: calc(100% - 50px);
-  border: var(--border);
-  border-radius: 5px;
-  background: var(--msger-bg);
-  box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2); */
-  
+  height: 60vh;
 }
 
 .msger-header {
@@ -60,15 +49,7 @@ body {
   overflow: auto;
   padding: 10px;
 }
-/* .msger-chat::-webkit-scrollbar {
-  width: 6px;
-}
-.msger-chat::-webkit-scrollbar-track {
-  background: #ddd;
-}
-.msger-chat::-webkit-scrollbar-thumb {
-  background: #bdbdbd;
-} */
+
 .msg {
   display: flex;
   align-items: flex-end;
@@ -125,9 +106,10 @@ body {
 
 .msger-inputarea {
   display: flex;
-  padding: 10px;
+  padding: 8px;
   border-top: var(--border);
   background: #eee;
+  margin: -9px;
 }
 .msger-inputarea * {
   padding: 10px;
