--- a/Frontend/src/app/test/test.component.html
+++ b/Frontend/src/app/test/test.component.html
@@ -173,25 +173,42 @@ i.br-icon.fa.fa-firefox
 -->
     </header>
     <main class="br-inner-page-content">
-
+      <div id="loading" style="z-index: 1000; margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 45%;
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);">
+          <div class="d-flex justify-content-center ">
+              <div class="spinner-border text-primary" role="status">
+                  <span class="visually-hidden">Loading...</span>
+              </div>
+          </div>
+      </div>
       <div class="br-conference-room-wrapper" >
         <!--check css in video block scss-->
-        <div *ngFor="let stream of streams">
+        <div >
 
         
-        <div class="br-confernce-user-lists" *ngIf="stream.attributes.type=='cam'">
+        <div class="br-confernce-user-lists">
 
-          <div class="br-user-wrapper"  >
-            <div class="br-video-wrapper">
+          <div class="br-user-wrapper" *ngFor="let stream of streams" >
+            <div class="br-video-wrapper"  *ngIf="stream.attributes.type=='cam'">
               <div class="br-title">{{stream.attributes.name}}</div>
               <div class="br-tools"><a class="br-icon br-ctrl-icon-no-video" *ngIf="stream.videoMuted"></a><a *ngIf="stream.audioMuted" class="br-icon br-ctrl-icon-no-audio" ></a></div>
-              <video class="br-video" [srcObject]="stream.mediaStream" autoplay muted></video>
+              <video *ngIf="!stream.videoMuted" class="br-video" [srcObject]="stream.mediaStream" autoplay muted></video>
+              <div class="img" *ngIf="stream.videoMuted">
+               
+            </div>
             </div>
           </div>
 
 
         </div>
-        <div *ngIf="stream.attributes.type == 'screen-share'" style="display: block;" class="br-screen-share-wrapper" id="screen"><video class="br-screen" [srcObject]="stream.mediaStream" autoplay></video></div>
+        <div *ngFor="let stream of streams" >
+          <div *ngIf="stream.attributes.type == 'screen-share'" style="display: block;" class="br-screen-share-wrapper" id="screen"><video class="br-screen" [srcObject]="stream.mediaStream" autoplay></video></div>
+
+        </div>
 
 
         <!-- <div   class="br-screen-share-wrapper" id="screen">
@@ -282,66 +299,8 @@ i.br-icon.fa.fa-firefox
       <div class="br-chat-wrapper" id="message">
         <div class="br-chat-inner-wrapper">
           <h3 class="br-title">Chat</h3>
-          <div class="br-icon-close"></div>
-          <ul class="br-msg-list no-style">
-            <li>
-              <figure class="br-avatar"><img src="https://i0.wp.com/digital-photography-school.com/wp-content/uploads/flickr/8260117875_5ab9373bce_o.jpg?resize=600%2C401&amp;ssl=1"></figure>
-              <div class="br-message-dtls">
-                <h5 class="br-name">John Doe</h5>
-                <div class="br-msg">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</div>
-              </div>
-            </li>
-            <li>
-              <figure class="br-avatar"><img src="https://briansmith.com/wp-content/uploads/2013/01/celebrity-portrait-photography.jpg"></figure>
-              <div class="br-message-dtls">
-                <h5 class="br-name">Aprila</h5>
-                <div class="br-msg">It is a long established fact that a reader will be distracted by the readable content of a page</div>
-              </div>
-            </li>
-            <li>
-              <figure class="br-avatar"><img src="https://static.bhphotovideo.com/explora/sites/default/files/styles/960/public/briancolor.jpg?itok=ZVR85Ekm"></figure>
-              <div class="br-message-dtls">
-                <h5 class="br-name">John Doe</h5>
-                <div class="br-msg">OK</div>
-              </div>
-            </li>
-            <li>
-              <figure class="br-avatar"><img src="https://static.bhphotovideo.com/explora/sites/default/files/styles/960/public/briancolor.jpg?itok=ZVR85Ekm"></figure>
-              <div class="br-message-dtls">
-                <h5 class="br-name">John Doe</h5>
-                <div class="br-msg">OK</div>
-              </div>
-            </li>
-            <li>
-              <figure class="br-avatar"><img src="https://static.bhphotovideo.com/explora/sites/default/files/styles/960/public/briancolor.jpg?itok=ZVR85Ekm"></figure>
-              <div class="br-message-dtls">
-                <h5 class="br-name">John Doe</h5>
-                <div class="br-msg">OK</div>
-              </div>
-            </li>
-            <li>
-              <figure class="br-avatar"><img src="https://static.bhphotovideo.com/explora/sites/default/files/styles/960/public/briancolor.jpg?itok=ZVR85Ekm"></figure>
-              <div class="br-message-dtls">
-                <h5 class="br-name">John Doe</h5>
-                <div class="br-msg">OK</div>
-              </div>
-            </li>
-            <li>
-              <figure class="br-avatar"><img src="https://static.bhphotovideo.com/explora/sites/default/files/styles/960/public/briancolor.jpg?itok=ZVR85Ekm"></figure>
-              <div class="br-message-dtls">
-                <h5 class="br-name">John Doe</h5>
-                <div class="br-msg">OK</div>
-              </div>
-            </li>
-            <li>
-              <figure class="br-avatar"><img src="https://phototalestudio.com/wp-content/uploads/2017/05/gainesville-portrait-photography-girls-and-planes7-1024x683.jpg"></figure>
-              <div class="br-message-dtls">
-                <h5 class="br-name">John Doe</h5>
-                <div class="br-msg">OK</div>
-              </div>
-            </li>
-          </ul>
-          <div class="br-submit-msg"><textarea class="form-control" placeholder="Type your message here"> </textarea><button class="btn br-btn">Send</button></div>
+          <div id="close" class="br-icon-close"></div>
+          <app-chat></app-chat>
         </div>
       </div>
     </main>
