toggle of screen while presenting issue fixed

--- a/Frontend/src/app/test/test.component.css
+++ b/Frontend/src/app/test/test.component.css
@@ -144,6 +144,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   color: #fff;
+  overflow: hidden;
 }
 
 .br-home-content-wrapper {
@@ -389,14 +390,14 @@ body {
 }
 
 .br-conference-room-wrapper {
-  position: relative;
+  position: absolute;
   width: calc(100% - 312px);
   padding-top: 70px;
   min-height: calc(100vh - 111px);
   display: flex;
   padding-bottom: 65px;
   align-content: center;
-  margin: auto;
+  margin: 2px;
 }
 
 .br-confernce-user-lists {
@@ -543,10 +544,10 @@ body {
 
 .br-screen-share-wrapper {
 
-  width: 98%;
-  display: none;
-  border-radius: 10px;
-  overflow: hidden;
+  height: 37rem;
+  width: 100%;
+  margin-left: 53px;
+  padding-left: 0px;
 }
 
 .br-screen-share-wrapper.active {
@@ -933,8 +934,8 @@ img {
 }
 
 .br-time-wrapper {
-  font-weight: 300;
-  font-size: 70px;
+  font-weight: 200;
+  font-size: 50px;
   line-height: 50px;
 }
 
@@ -973,4 +974,7 @@ img {
     text-align: center;
     color: white;
  
+}
+button{
+  margin: 1mm;
 }
