--- a/Frontend/src/app/test/test.component.html
+++ b/Frontend/src/app/test/test.component.html
@@ -216,7 +216,7 @@ i.br-icon.fa.fa-firefox
         </div> -->
 
       </div>
-        
+    </div>
         <div class="br-control-panel">
           <ul class="nav justify-content-center">
             <li class="nav-item">
@@ -288,7 +288,7 @@ i.br-icon.fa.fa-firefox
         
         </ul>
         </div>
-      </div>
+      
 
 
 
@@ -308,8 +308,8 @@ i.br-icon.fa.fa-firefox
       <div class="row align-items-center">
         <div class="col-sm-6">
           <div class="br-date-time-wrapper">
-            <div class="br-time-wrapper"><span class="br-time"> 10:35 </span><span class="br-format">am</span></div>
-            <div class="br-date-wrapper">MON, 5 OCTOBER {{now}}</div>
+            <!-- <div class="br-time-wrapper"><span class="br-time"> {{now}} </span></div> -->
+            <div class="br-date-wrapper">{{today}}</div>
           </div>
         </div>
       </div>
